--- a/prototype/grain-properties.cfg
+++ b/prototype/grain-properties.cfg
@@ -1,15 +1,15 @@
 type,prop,value
 join,size,10
 join,shape,"ellipse"
-join,color_default,"#FF7F50"
+join,color,"#FF7F50"
 fork,size,10
 fork,shape,"ellipse"
-fork,color_default,"#2E8B57"
+fork,color,"#2E8B57"
 fragment,size,30
 fragment,shape,"rectangle"
 fragment,mult,10
 fragment,bins,10
-fragment,color_default,"#4682B4"
+fragment,color,"#4682B4"
 start,size,15
 start,shape,"ellipse"
 start,color,"#DEB887"
