Add second value for property

--- a/prototype/grain-properties-gray.cfg
+++ b/prototype/grain-properties-gray.cfg
@@ -1,18 +1,18 @@
-type,prop,value
-join,size,10
-join,shape,"ellipse"
-join,color,"#D3D3D3"
-fork,size,10
-fork,shape,"ellipse"
-fork,color,"#D3D3D3"
-fragment,size,30
-fragment,shape,"rectangle"
-fragment,mult,10
-fragment,bins,10
-fragment,color,"#6B6B6B"
-start,size,15
-start,shape,"ellipse"
-start,color,"#D3D3D3"
-end,size,15
-end,shape,"ellipse"
-end,color,"#D3D3D3"
+type,prop,value1,value2
+join,size,10,NA
+join,shape,"ellipse",NA
+join,color,"#D3D3D3",NA
+fork,size,10,NA
+fork,shape,"ellipse",NA
+fork,color,"#D3D3D3",NA
+fragment,size,30,NA
+fragment,shape,"rectangle",NA
+fragment,mult,10,NA
+fragment,bins,10,NA
+fragment,color,"#6B6B6B",NA
+start,size,15,NA
+start,shape,"ellipse",NA
+start,color,"#D3D3D3",NA
+end,size,15,NA
+end,shape,"ellipse",NA
+end,color,"#D3D3D3",NA
