--- a/prototype/edge-properties-gray.cfg
+++ b/prototype/edge-properties-gray.cfg
@@ -1,5 +1,5 @@
-type,prop,value
-create,color,"#000000"
-sync,color,"#000000"
-continuation,color,"#000000"
-scope,color,"#000000"
+type,prop,value1,value2
+create,color,"#000000",NA
+sync,color,"#000000",NA
+continuation,color,"#000000",NA
+scope,color,"#000000",NA
