--- a/prototype/edge-properties.cfg
+++ b/prototype/edge-properties.cfg
@@ -1,6 +1,6 @@
-type,prop,value
-create,color,"#2E8B57"
-sync,color,"#FF7F50"
-continuation,color,"#000000"
-scope,color,"#000000"
+type,prop,value1,value2
+create,color,"#2E8B57",NA
+sync,color,"#FF7F50",NA
+continuation,color,"#000000",NA
+scope,color,"#000000",NA
 
