--- a/prototype/grain-properties.cfg
+++ b/prototype/grain-properties.cfg
@@ -1,18 +1,18 @@
-type,prop,value
-join,size,10
-join,shape,"ellipse"
-join,color,"#FF7F50"
-fork,size,10
-fork,shape,"ellipse"
-fork,color,"#2E8B57"
-fragment,size,30
-fragment,shape,"rectangle"
-fragment,mult,10
-fragment,bins,10
-fragment,color,"#4682B4"
-start,size,15
-start,shape,"ellipse"
-start,color,"#DEB887"
-end,size,15
-end,shape,"ellipse"
-end,color,"#DEB887"
+type,prop,value1,value2
+join,size,10,NA
+join,shape,"ellipse",NA
+join,color,"#FF7F50",NA
+fork,size,10,NA
+fork,shape,"ellipse",NA
+fork,color,"#2E8B57",NA
+fragment,size,30,NA
+fragment,shape,"rectangle",NA
+fragment,mult,10,NA
+fragment,bins,10,NA
+fragment,color,"#4682B4",NA
+start,size,15,NA
+start,shape,"ellipse",NA
+start,color,"#DEB887",NA
+end,size,15,NA
+end,shape,"ellipse",NA
+end,color,"#DEB887",NA
