Color gradient property

--- a/prototype/grain-properties-gray.cfg
+++ b/prototype/grain-properties-gray.cfg
@@ -10,6 +10,7 @@ fragment,shape,"rectangle",NA
 fragment,mult,10,NA
 fragment,bins,10,NA
 fragment,color,"#6B6B6B",NA
+fragment,color_gradient,"gray10","gray90"
 start,size,15,NA
 start,shape,"ellipse",NA
 start,color,"#D3D3D3",NA
