--- a/prototype/grain-properties.cfg
+++ b/prototype/grain-properties.cfg
@@ -10,6 +10,7 @@ fragment,shape,"rectangle",NA
 fragment,mult,10,NA
 fragment,bins,10,NA
 fragment,color,"#4682B4",NA
+fragment,color_gradient,"yellow", "orange"
 start,size,15,NA
 start,shape,"ellipse",NA
 start,color,"#DEB887",NA
