--- a/prototype/edge-properties.cfg
+++ b/prototype/edge-properties.cfg
@@ -1,4 +1,4 @@
-type,prop,value1,value2
+type,property,value1,value2
 create,color,"#2E8B57",NA
 sync,color,"#FF7F50",NA
 continuation,color,"#000000",NA
