--- a/prototype/edge-properties-gray.cfg
+++ b/prototype/edge-properties-gray.cfg
@@ -1,4 +1,4 @@
-type,prop,value1,value2
+type,property,value1,value2
 create,color,"#000000",NA
 sync,color,"#000000",NA
 continuation,color,"#000000",NA
