Property configuration update

--- a/prototype/edge-properties.cfg
+++ b/prototype/edge-properties.cfg
@@ -3,5 +3,5 @@ create,color,"#2E8B57",NA
 sync,color,"#FF7F50",NA
 continuation,color,"#000000",NA
 scope,color,"#000000",NA
-common,weight,"[work_cycles]",NA
+common,weight,"[work_cycles]","direct"
 
