--- a/prototype/grain-properties-gray.cfg
+++ b/prototype/grain-properties-gray.cfg
@@ -1,19 +1,21 @@
 type,property,value1,value2
-join,size,10,NA
 join,shape,"ellipse",NA
+join,diameter,10,NA
 join,color,"#D3D3D3",NA
-fork,size,10,NA
 fork,shape,"ellipse",NA
-fork,color,"#D3D3D3",NA
-fragment,size,30,NA
-fragment,shape,"rectangle",NA
-fragment,mult,10,NA
-fragment,bins,10,NA
-fragment,color,"#6B6B6B",NA
-fragment,color_gradient,"gray10","gray90"
-start,size,15,NA
-start,shape,"ellipse",NA
+fork,diameter,10,NA
+fork,color,"#2E8B57",NA
+task,shape,"rectangle",NA
+task,width,30,NA
+task,height,"[work_cycles]","linear"
+#task,color,"#6B6B6B",NA
+#task,color,"[tag]","linear"
+task,color,"[overhead_cycles]","linear-step"
+start,shape,"rectangle",NA
+start,width,15,NA
+start,height,15,NA
 start,color,"#D3D3D3",NA
-end,size,15,NA
-end,shape,"ellipse",NA
+end,shape,"rectangle",NA
+end,width,15,NA
+end,height,15,NA
 end,color,"#D3D3D3",NA
