--- a/prototype/grain-properties.cfg
+++ b/prototype/grain-properties.cfg
@@ -1,19 +1,20 @@
 type,property,value1,value2
-join,size,10,NA
 join,shape,"ellipse",NA
+join,diameter,10,NA
 join,color,"#FF7F50",NA
-fork,size,10,NA
 fork,shape,"ellipse",NA
+fork,diameter,10,NA
 fork,color,"#2E8B57",NA
-fragment,size,30,NA
-fragment,shape,"rectangle",NA
-fragment,mult,10,NA
-fragment,bins,10,NA
-fragment,color,"#4682B4",NA
-fragment,color_gradient,"yellow", "orange"
-start,size,15,NA
-start,shape,"ellipse",NA
+task,shape,"rectangle",NA
+task,width,30,NA
+task,height,"[work_cycles]","linear"
+#task,color,"#4682B4",NA
+task,color,"[tag]","linear"
+start,shape,"rectangle",NA
+start,width,15,NA
+start,height,15,NA
 start,color,"#DEB887",NA
-end,size,15,NA
-end,shape,"ellipse",NA
+end,shape,"rectangle",NA
+end,width,15,NA
+end,height,15,NA
 end,color,"#DEB887",NA
