Seperate configuration into constants and mapped

--- a/prototype/grain-properties.cfg
+++ b/prototype/grain-properties.cfg
@@ -1,4 +1,6 @@
 type,property,value1,value2
+# Constants
+# DO NOT CHANGE TO MAPPED!
 join,shape,"ellipse",NA
 join,diameter,10,NA
 join,color,"#FF7F50",NA
@@ -7,9 +9,7 @@ fork,diameter,10,NA
 fork,color,"#2E8B57",NA
 task,shape,"rectangle",NA
 task,width,30,NA
-task,height,"[work_cycles]","linear"
 #task,color,"#4682B4",NA
-task,color,"[tag]","linear"
 start,shape,"rectangle",NA
 start,width,15,NA
 start,height,15,NA
@@ -18,3 +18,9 @@ end,shape,"rectangle",NA
 end,width,15,NA
 end,height,15,NA
 end,color,"#DEB887",NA
+# Mapped
+# Mapped can be changed to constant
+# Valid mapping types are direct, linear, linear-step
+task,height,"[work_cycles]","linear"
+task,color,"[tag]","linear"
+#task,width,"[overhead_cycles]",NA
