--- a/prototype/edge-properties-gray.cfg
+++ b/prototype/edge-properties-gray.cfg
@@ -1,5 +1,11 @@
 type,property,value1,value2
+# Constants
+# DO NOT CHANGE TO MAPPED!
 create,color,"#000000",NA
 sync,color,"#000000",NA
 continuation,color,"#000000",NA
 scope,color,"#000000",NA
+# Mapped
+# Mapped can be changed to constant
+# Valid mapping types are direct, linear, linear-step
+common,weight,"[work_cycles]","direct"
