--- a/prototype/grain-properties-gray.cfg
+++ b/prototype/grain-properties-gray.cfg
@@ -1,4 +1,6 @@
 type,property,value1,value2
+# Constants
+# DO NOT CHANGE TO MAPPED!
 join,shape,"ellipse",NA
 join,diameter,10,NA
 join,color,"#D3D3D3",NA
@@ -7,10 +9,8 @@ fork,diameter,10,NA
 fork,color,"#2E8B57",NA
 task,shape,"rectangle",NA
 task,width,30,NA
-task,height,"[work_cycles]","linear"
 #task,color,"#6B6B6B",NA
 #task,color,"[tag]","linear"
-task,color,"[overhead_cycles]","linear-step"
 start,shape,"rectangle",NA
 start,width,15,NA
 start,height,15,NA
@@ -19,3 +19,8 @@ end,shape,"rectangle",NA
 end,width,15,NA
 end,height,15,NA
 end,color,"#D3D3D3",NA
+# Mapped
+# Mapped can be changed to constant
+# Valid mapping types are direct, linear, linear-step
+task,height,"[work_cycles]","linear"
+task,color,"[overhead_cycles]","linear-step"
