--- a/prototype/grain-properties.cfg
+++ b/prototype/grain-properties.cfg
@@ -22,5 +22,25 @@ end,color,"#DEB887",NA
 # Mapped can be changed to constant
 # Valid mapping types are direct, linear, linear-step
 task,height,"[work_cycles]","linear"
-task,color,"[tag]","linear"
-#task,width,"[overhead_cycles]",NA
+#task,height,"[overhead_cycles]","linear"
+#task,height,"[ins_count]","linear"
+#task,height,"[exec_cycles]","linear"
+#task,color,"[outline_function]","linear"
+#task,color,"[mem_fp]","linear"
+#task,color,"[-compute_int]","linear"
+#task,color,"[PAPI_RES_STL_sum]","linear"
+#task,color,"[-mem_hier_util]","linear"
+#task,color,"[work_deviation]","linear"
+#task,color,"[overhead_deviation]","linear"
+#task,color,"[-parallel_benefit]","linear"
+#task,color,"[-min_shape_contrib]","linear"
+#task,color,"[-max_shape_contrib]","linear"
+#task,color,"[-median_shape_contrib]","linear"
+#task,color,"[sibling_work_balance]","linear"
+#task,color,"[cpu_id]","linear-step"
+#task,color,"[tag]","linear-step"
+task,color,"[outline_function]","linear-step"
+# For task-based programs only
+#task,color,"[sibling_scatter]","linear"
+# For for-loop programs only
+#task,color,"[chunk_work_balance]","linear"
