Set mapping to linear and linear-step sensibly

--- a/prototype/grain-properties-for-loop.cfg
+++ b/prototype/grain-properties-for-loop.cfg
@@ -21,23 +21,24 @@ end,color,"#DEB887",NA
 # Mapped
 # Mapped can be changed to constant
 # Valid mapping types are direct, linear, linear-step
-task,height,"[work_cycles]","linear"
-#task,height,"[overhead_cycles]","linear"
-#task,height,"[ins_count]","linear"
-#task,height,"[exec_cycles]","linear"
-#task,color,"[outline_function]","linear"
-#task,color,"[mem_fp]","linear"
-#task,color,"[-compute_int]","linear"
-#task,color,"[PAPI_RES_STL_sum]","linear"
-#task,color,"[-mem_hier_util]","linear"
-#task,color,"[work_deviation]","linear"
-#task,color,"[overhead_deviation]","linear"
-#task,color,"[-parallel_benefit]","linear"
-#task,color,"[-min_shape_contrib]","linear"
-#task,color,"[-max_shape_contrib]","linear"
-#task,color,"[-median_shape_contrib]","linear"
-#task,color,"[sibling_work_balance]","linear"
 #task,color,"[cpu_id]","linear-step"
 #task,color,"[tag]","linear-step"
 task,color,"[outline_function]","linear-step"
-#task,color,"[chunk_work_balance]","linear"
+task,height,"[work_cycles]","linear-step"
+#task,height,"[overhead_cycles]","linear-step"
+#task,height,"[ins_count]","linear-step"
+#task,height,"[exec_cycles]","linear-step"
+#task,color,"[outline_function]","linear-step"
+#task,color,"[mem_fp]","linear-step"
+#task,color,"[-compute_int]","linear-step"
+#task,color,"[PAPI_RES_STL_sum]","linear-step"
+#task,color,"[-mem_hier_util]","linear-step"
+#task,color,"[work_deviation]","linear-step"
+#task,color,"[overhead_deviation]","linear-step"
+#task,color,"[-parallel_benefit]","linear-step"
+#task,color,"[-min_shape_contrib]","linear-step"
+#task,color,"[-max_shape_contrib]","linear-step"
+#task,color,"[-median_shape_contrib]","linear-step"
+#task,color,"[sibling_work_balance]","linear-step"
+#task,color,"[chunk_work_balance]","linear-step"
+#task,color,"[chunk_work_cpu_balance]","linear-step"
