Differentiate fork and join dimensions into width and height

--- a/prototype/grain-properties-gray.cfg
+++ b/prototype/grain-properties-gray.cfg
@@ -2,10 +2,12 @@ type,property,value1,value2
 # Constants
 # DO NOT CHANGE TO MAPPED!
 join,shape,"ellipse",NA
-join,diameter,10,NA
+join,width,10,NA
+join,height,10,NA
 join,color,"#D3D3D3",NA
 fork,shape,"ellipse",NA
-fork,diameter,10,NA
+fork,width,10,NA
+fork,height,10,NA
 fork,color,"#2E8B57",NA
 task,shape,"rectangle",NA
 task,width,30,NA
