--- a/prototype/grain-properties-for-loop.cfg
+++ b/prototype/grain-properties-for-loop.cfg
@@ -1,11 +1,11 @@
 type,property,value1,value2
 # Constants
 # DO NOT CHANGE TO MAPPED!
-join,shape,"ellipse",NA
+join,shape,"circle",NA
 join,width,10,NA
 join,height,10,NA
 join,color,"#FF7F50",NA
-fork,shape,"ellipse",NA
+fork,shape,"circle",NA
 fork,width,10,NA
 fork,height,10,NA
 fork,color,"#2E8B57",NA
