--- a/prototype/configs/grain-properties-unreduced.cfg
+++ b/prototype/configs/grain-properties-unreduced.cfg
@@ -11,7 +11,7 @@ fork,height,10,NA
 fork,color,"#2E8B57",NA
 task,shape,"rectangle",NA
 task,width,30,NA
-task,color,"#4682B4",NA
+#task,color,"#4682B4",NA
 start,shape,"rectangle",NA
 start,width,15,NA
 start,height,15,NA
@@ -23,7 +23,7 @@ end,color,"#DEB887",NA
 # Mapped
 # Mapped can be changed to constant
 # Valid mapping types are direct, linear, linear-step
-#task,color,"[cpu_id]","linear"
+task,color,"[cpu_id]","linear"
 #task,color,"[tag]","linear"
 #task,color,"[outline_function]","linear"
 task,height,"[exec_cycles]","linear-step"
