Add source line as optional task color map

--- a/prototype/configs/grain-properties-for-loop.cfg
+++ b/prototype/configs/grain-properties-for-loop.cfg
@@ -25,6 +25,7 @@ end,color,"#DEB887",NA
 # Valid mapping types are direct, linear, linear-step
 #task,color,"[cpu_id]","linear-step"
 #task,color,"[tag]","linear-step"
+#task,color,"[source_line]","linear-step"
 task,color,"[outline_function]","linear-step"
 task,height,"[work_cycles]","linear-step"
 #task,height,"[overhead_cycles]","linear-step"
