--- a/prototype/configs/grain-properties.cfg
+++ b/prototype/configs/grain-properties.cfg
@@ -25,6 +25,7 @@ end,color,"#DEB887",NA
 # Valid mapping types are direct, linear, linear-step
 #task,color,"[cpu_id]","linear"
 #task,color,"[tag]","linear"
+#task,color,"[source_line]","linear"
 task,color,"[outline_function]","linear"
 task,height,"[work_cycles]","linear-step"
 #task,height,"[overhead_cycles]","linear-step"
