--- a/prototype/configs/grain-properties-gray.cfg
+++ b/prototype/configs/grain-properties-gray.cfg
@@ -26,6 +26,7 @@ end,color,"#D3D3D3",NA
 # Valid mapping types are direct, linear, linear-step
 #task,color,"[cpu_id]","linear"
 #task,color,"[tag]","linear"
+#task,color,"[source_line]","linear-step"
 task,color,"[outline_function]","linear"
 task,height,"[work_cycles]","linear-step"
 #task,height,"[overhead_cycles]","linear-step"
